# nagyhazi

./: CMakeLists.txt  line_operations.c  line_operations.h  main.c  matrix2.txt  matrix_io.c  matrix_io.h  matrix_lib.c  matrix_lib.h  matrix_list.c  matrix_list.h  matrix_operations.c  matrix_operations.h  struct.h  test.txt  value_check.c  value_check.h  value_checks.c  value_checks.h
